--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -15,13 +15,11 @@
     flex-direction: column;
 }
 
-@media screen and (max-width: 1520px) {
-    .contact-section{
-        margin-top: 20em;
+@media screen and (min-width: 368px) and (max-width: 767px) {
+    .contact-content{
+        width: 85%;
     }
-}
-@media screen and (max-width: 1100px) {
     .contact-section{
-        margin-top: 140em;
+        height: 100vh;
     }
 }
