--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -15,11 +15,21 @@
     flex-direction: column;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1300px) {
+    .contact-content{
+        width: 85%;
+    }
+    .contact-section{
+        height: 100vh;
+        margin-top: 0;
+    }
+}
 @media screen and (min-width: 368px) and (max-width: 767px) {
     .contact-content{
         width: 85%;
     }
     .contact-section{
         height: 100vh;
+        margin-top: 0;
     }
 }
