--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -51,7 +51,8 @@
     z-index: 3;
     display: grid;
     align-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(3,1fr);
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
     grid-gap: 1rem;
     grid-template-rows: repeat(2, auto);
 }
@@ -111,19 +112,23 @@
 
   @media screen and (min-width: 768px) and (max-width: 1300px) {
     .image-gallery{
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
      
     }
     .gallery-section{
-      height: 60vh;
+      height: 80vh;
+      padding-top: 0;
     }
 }
 @media screen and (min-width: 368px) and (max-width: 767px) {
     .image-gallery{
       grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-     
     }
     .gallery-section{
-      height: 80vh;
+      height: 95vh;
+      
+    }
+    .shape-overlay{
+      display: none;
     }
 }
